--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <!-- Proyecto 2 -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/proyectoflexx.png" alt="Proyecto 2">
+              <img src="imagenes/Proyectoflexx.png" alt="Proyecto 2">
               <div class="overlay">
                 <p>Proyecto 2</p>
                 <div class="iconos-contenedor">
