--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <a href="https://github.com/lizethrju/CopiadeGo0gle.git" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="https://copiade-go0gle.vercel.app/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://copiade-go0gle.vercel.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -152,7 +152,7 @@
                   <a href="https://github.com/lizethrju/flexbox.git" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="https://flexbox-psi.vercel.app/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://flexbox-psi.vercel.app" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-laptop"></i>
                   </a>
                 </div>
